--- a/frontend/css/default.css
+++ b/frontend/css/default.css
@@ -25,7 +25,7 @@ fieldset ul.col-6 li {
 	display:inline-block;
 }
 
-fieldset input {
+input, textarea {
 	height:2em;
 	padding:0.2em;
 	margin-right:0.2em;
@@ -50,14 +50,14 @@ fieldset input {
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e5e5e5',GradientType=0 ); /* IE6-8 */
 }
 
-fieldset input:hover {
+input:hover,textarea:hover {
 	border-color:#333;
 	background:
 }
 
-fieldset label {
+label {
 	display:inline-block;
-	width:50%;
+	width:30%;
 	font-weight:bold;
 }
 
@@ -72,7 +72,7 @@ fieldset label {
 	fieldset input {
 		width:100%;
 	}
-	fieldset ul {
+	fieldset ul.col-3 {
 		-moz-column-count: 1;
 		-webkit-column-count: 1;
 		column-count: 1;
