--- a/seapal/include/style.css
+++ b/seapal/include/style.css
@@ -1,7 +1,6 @@
 body {
 	text-align:center;
 	background:yellow;
-
 }
 
 #wrapper {
@@ -15,21 +14,20 @@ body {
 	position: fixed;
 	top: 0;
 	left: 50%;
-	width: 200px;
+	width: 220px;
 	margin-left:-490px;
 	background: cyan;
 }
 
 #left h1 a {
 	text-indent: -999999px;
-	width:200px;
+	//width:200px;
 	height:100px;
 	background:#666;
 	display:block;
 }
 
 section {
-	margin-left: 200px;
 	margin-top: 150px;
 	background: magenta;
 }
