--- a/seapal/include/style.css
+++ b/seapal/include/style.css
@@ -1,30 +1,11 @@
 body {
-	text-align:center;
-	background:yellow;
+	padding-top: 100px;
+    padding-bottom: 40px;
 }
 
-/*
-#wrapper {
-	margin:0 auto;
-	text-align:left;
-	width:980px;
-	border:1px solid red;
-}
-
-
-#left {
-	position: fixed;
-	top: 0;
-	left: 50%;
-	width: 220px;
-	margin-left:-490px;
-	background: cyan;
-}
-*/
-
-#left h1 a {
-	text-indent: -999999px;
-	height:100px;
-	background:#666;
-	display:block;
+.round {
+	border-radius:5px;
+	background:#ccc;
+	padding: 10px;
+	margin-bottom:10px;
 }
