--- a/seapal/include/style.css
+++ b/seapal/include/style.css
@@ -4,8 +4,7 @@
 
 body {
 	font-family:'Droid Serif', serif;
-	/*padding-top: 100px;
-	padding-bottom: 40px;*/
+	
 }
 
 h1, h2, h3, h4, h5, h6, ul li  {
@@ -19,6 +18,10 @@ ul li.active, h3  {
  * Header / Navigation
  */
 
+.header-wrapper {
+	margin-bottom: 100px;
+}
+
 .navbar {
 	box-shadow:1px 1px 10px #333;
 }
@@ -27,6 +30,28 @@ ul li.active, h3  {
  * Content
  */
 
+ .content-wrapper {
+ 	min-height: 480px;
+ }
+
+ .input-wrapper textarea {
+ 	width: 100%;
+	height: 148px;
+	resize: none;
+ }
+
+ .input-wrapper input.compact {
+ 	width: 28px;
+ }
+
+ .input-wrapper input.shift {
+ 	margin-left: 20px;
+ }
+
+ .input-wrapper input {
+ 	width: 100%
+ }
+
 .round {
 	border-radius:5px;
 	background:#ccc;
@@ -34,9 +59,45 @@ ul li.active, h3  {
 	margin-bottom:10px;
 }
 
+.listview {
+	margin-top: 20px;
+	margin-bottom: 10px;
+}
+
+
+.left {
+	float: left;
+}
+
+.right {
+	float: right;
+}
+
+.gadgets-wrapper {
+	margin-top: 20px;
+	margin-bottom: 10px;
+}
+
+.gadget {
+	margin-left: auto;
+	margin-right: auto;
+	width: 200px;
+}
+
+.notes textarea {
+	width: 185px;
+	height: 185px;
+	resize: none;
+}
+
 /**
  * Footer
  */
+
+ .footer-wrapper {
+ 	min-height: 80px;
+ 	margin-top: 30px;
+ }
 
 .footer {
 	box-shadow: 1px 1px 10px #333;
@@ -49,7 +110,6 @@ ul li.active, h3  {
 	background-repeat:repeat-x;
 	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff222222', endColorstr='#ff111111', GradientType=0);
 	border-color:#252525;
-	min-height: 80px;
 	padding: 20px;
 }
 
