--- a/seapal/include/style.css
+++ b/seapal/include/style.css
@@ -2,9 +2,12 @@
  * General
  */
 
+html, body {
+	height:100%;
+}
+
 body {
-	font-family:'Droid Serif', serif;
-	
+	font-family:'Droid Serif', serif;	
 }
 
 h1, h2, h3, h4, h5, h6, ul li  {
@@ -119,4 +122,8 @@ ul li.active, h3  {
 
 .footer ul {
 	list-style-type: none;
+}
+
+#map_canvas  {
+	height:80%;
 }
