Added pagination for boat info Added abilitiy to delete boats Small css fixes

--- a/frontend/include/style.css
+++ b/frontend/include/style.css
@@ -155,6 +155,14 @@ body.index .header-wrapper {
 	resize: none;
 }
 
+.table {
+	color: #000;
+}
+
+.modal {
+	color: #000;
+}
+
 /**
  * Footer
  */
