--- a/frontend/include/style.css
+++ b/frontend/include/style.css
@@ -217,6 +217,23 @@ body.withsubnavi .header-wrapper {
 	max-height: 576px;
 }
 
+input.asText:disabled{
+	border: 0px;
+	background: #00547c;
+	color: #fff;
+	box-shadow: none;
+	-webkit-box-shadow: none;
+	-webkit-transition: none;
+	cursor: default;
+}
+
+input.asText::-webkit-outer-spin-button,
+input.asText::-webkit-inner-spin-button {
+	margin: 0;
+	visibility: hidden;
+	webkit-appearance: none;
+}
+
 /**
  * Footer
  */
