Added tooltips, optimized click handling in boat

--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -270,6 +270,10 @@ input.asText::-webkit-inner-spin-button {
 	webkit-appearance: none;
 }
 
+td.actionCol i {
+	padding-right: 4px;
+}
+
 /**
  * Footer
  */
