--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -275,10 +275,10 @@ th.actionCol {
 }
 
 td.actionCol i {
-	margin-right: 5px;
+	margin-left: 5px;
 }
-td.actionCol a:last-child i {
-	margin-right: 0px;
+td.actionCol a:first-child i {
+	margin-left: 0px;
 }
 
 /**
