--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -226,12 +226,15 @@ body.withsubnavi .header-wrapper {
 {
 	margin-left: auto;
 	margin-right: auto;
-	width: 200px;
 }
 .notes textarea
 {
-	width: 185px;
 	height: 185px;
+	-webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+            box-sizing: border-box;
+
+    width: 100%;
 	resize: none;
 }
 
