added datepicker, fixed bugs in the fake-db-data-script

--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -296,6 +296,17 @@ td.actionCol a:first-child i {
 	margin-left: 0px;
 }
 
+.datepicker {
+	margin-right: 26px;
+	color: black;
+}
+.datepicker-small {
+	margin-right: 42px;
+}
+.datepicker label {
+	color: white;
+}
+
 /**
  * Footer
  */
