--- a/app/views/contact.scala.html
+++ b/app/views/contact.scala.html
@@ -1,13 +1,15 @@
-﻿<!DOCTYPE HTML>
+﻿
+
+<!DOCTYPE HTML>
 <html>
 	<head>
-		<title>SeaPal - Contact</title>
-		<?php include("htmlhead.php"); ?>
+		<title>Seapal - Contact</title>
+		@htmlhead()
 	</head>
 	<body>
 
 		<div class="header-wrapper">
-			<?php include("header.php"); ?>
+			@header()
 		</div>
 
 		<div class="container">
@@ -43,7 +45,7 @@
 		</div>
 
 		<div class="footer-wrapper">
-			<?php include("footer.php"); ?>
+			@footer()
 		</div>
 		
 	</body>
