--- a/app/views/htmlhead.scala.html
+++ b/app/views/htmlhead.scala.html
@@ -1,11 +1,11 @@
 <!-- CSS -->
 <link href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700|Droid+Serif:400,700' rel='stylesheet' type='text/css'>
-<link type="text/css" rel="stylesheet" href="lib/bootstrap-blue/css/bootstrap.min.css" />
-<link type="text/css" rel="stylesheet" href="css/style.css" />
+<link type="text/css" rel="stylesheet" href="assets/lib/bootstrap-blue/css/bootstrap.min.css" />
+<link type="text/css" rel="stylesheet" href="assets/css/style.css" />
 
 <!-- JS -->
 <script src="http://code.jquery.com/jquery-latest.js"></script>
-<script src="lib/bootstrap-blue/js/bootstrap.min.js"></script>
+<script src="assets/lib/bootstrap-blue/js/bootstrap.min.js"></script>
 
 <!--[if lt IE 9]>
 <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
