--- a/app/views/screenshots.scala.html
+++ b/app/views/screenshots.scala.html
@@ -1,13 +1,15 @@
+@(message: String)
+
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>SeaPal - Screenshots</title>
-		<?php include("htmlhead.php"); ?>
+		<title>@message</title>
+		@htmlhead()
 	</head>
 	<body>
 
 		<div class="header-wrapper">
-			<?php include("header.php"); ?>
+			@header()
 		</div>
 
 		<div class="content-wrapper">
@@ -22,7 +24,7 @@
 								<div id="slideshow" class="carousel slide">
 								  <div class="carousel-inner">
 									<div class="active item">
-										<img src="images/screenshots/SeaPal-InitialPosition.jpg" alt="" />
+										<img src="assets/images/screenshots/SeaPal-InitialPosition.jpg" alt="" />
 										<div class="carousel-caption">
 											<p>
 												Map view with current position, initial view
@@ -30,7 +32,7 @@
 										</div>
 									</div>
 									<div class="item">
-										<img src="images/screenshots/SeaPal-Gothenborg-Menu.jpg" alt="" />
+										<img src="assets/images/screenshots/SeaPal-Gothenborg-Menu.jpg" alt="" />
 										<div class="carousel-caption">
 											<p>
 												Menu selected
@@ -38,7 +40,7 @@
 										</div>
 									</div>
 									<div class="item">
-										<img src="images/screenshots/SeaPal-Gothenborg-Tools.jpg" alt="" />
+										<img src="assets/images/screenshots/SeaPal-Gothenborg-Tools.jpg" alt="" />
 										<div class="carousel-caption">
 											<p>
 												Tools selected
@@ -46,7 +48,7 @@
 										</div>
 									</div>
 									<div class="item">
-										<img src="images/screenshots/SeaPal-Gothenborg-OSM.jpg" alt="" />
+										<img src="assets/images/screenshots/SeaPal-Gothenborg-OSM.jpg" alt="" />
 										<div class="carousel-caption">
 											<p>
 												Map view with OpenSeaMap showing Gothenburg
@@ -54,7 +56,7 @@
 										</div>
 									</div>
 									<div class="item">
-										<img src="images/screenshots/SeaPal-SatelliteView.jpg" alt="" />
+										<img src="assets/images/screenshots/SeaPal-SatelliteView.jpg" alt="" />
 										<div class="carousel-caption">
 											<p>
 												Satellite view
@@ -62,7 +64,7 @@
 										</div>
 									</div>
 									<div class="item">
-										<img src="images/screenshots/SeaPal-Satellite-Closeup.jpg" alt="" />
+										<img src="assets/images/screenshots/SeaPal-Satellite-Closeup.jpg" alt="" />
 										<div class="carousel-caption">
 											<p>
 												Satellite view - Close-up
@@ -70,7 +72,7 @@
 										</div>
 									</div>
 									<div class="item">
-										<img src="images/screenshots/SeaPal-Southampton-OSM.jpg" alt="" />
+										<img src="assets/images/screenshots/SeaPal-Southampton-OSM.jpg" alt="" />
 										<div class="carousel-caption">
 											<p>
 												Map view with OpenSeaMap showing Southampton
@@ -78,7 +80,7 @@
 										</div>
 									</div>
 									<div class="item">
-										<img src="images/screenshots/SeaPal-Southampton-OSM.jpg" alt="" />
+										<img src="assets/images/screenshots/SeaPal-Southampton-OSM.jpg" alt="" />
 										<div class="carousel-caption">
 											<p>
 												Map view with OpenSeaMap showing Southampton
@@ -86,7 +88,7 @@
 										</div>
 									</div>
 									<div class="item">
-										<img src="images/screenshots/SeaPal-Konstanz-IBN.jpg" alt="" />
+										<img src="assets/images/screenshots/SeaPal-Konstanz-IBN.jpg" alt="" />
 										<div class="carousel-caption">
 											<p>
 												Offline map from IBN
@@ -94,7 +96,7 @@
 										</div>
 									</div>
 									<div class="item">
-										<img src="images/screenshots/SeaPal-POI-Search.jpg" alt="" />
+										<img src="assets/images/screenshots/SeaPal-POI-Search.jpg" alt="" />
 										<div class="carousel-caption">
 											<p>
 												Searching for Points of Interest
@@ -102,7 +104,7 @@
 										</div>
 									</div>
 									<div class="item">
-										<img src="images/screenshots/SeaPal-POI-Harborinfo.jpg" alt="" />
+										<img src="assets/images/screenshots/SeaPal-POI-Harborinfo.jpg" alt="" />
 										<div class="carousel-caption">
 											<p>
 												Points of Interest: Info for a Harbour
@@ -124,7 +126,7 @@
 		</div>
 
 		<div class="footer-wrapper">
-			<?php include("footer.php"); ?>
+			@footer()
 		</div>
 		
 	</body>
