--- a/app/views/user_guide.scala.html
+++ b/app/views/user_guide.scala.html
@@ -1,13 +1,15 @@
+@(message: String)
+
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>SeaPal - How To</title>
-		<?php include("htmlhead.php"); ?>
+		<title>@message</title>
+		@htmlhead()
 	</head>
 	<body>
 
 		<div class="header-wrapper">
-			<?php include("header.php"); ?>
+			@header()
 		</div>
 
 		<div class="container">
@@ -44,7 +46,7 @@
 				</div>
 				<div class="span6">
 					<div class="round">
-						<img src="images/screenshots/SeaPal-Gothenborg-OSM.jpg" />
+						<img src="assets/images/screenshots/SeaPal-Gothenborg-OSM.jpg" />
 					</div>
 				</div>
 			</div><!-- row end -->
@@ -73,7 +75,7 @@
 				</div>
 				<div class="span6">
 					<div class="round">
-						<img src="images/screenshots/SeaPal-Gothenborg-Menu.jpg" />
+						<img src="assets/images/screenshots/SeaPal-Gothenborg-Menu.jpg" />
 					</div>
 				</div>
 			</div><!-- row end -->
@@ -89,7 +91,7 @@
 				</div>
 				<div class="span6">
 					<div class="round">
-						<img src="images/screenshots/SeaPal-SatelliteView.jpg" />
+						<img src="assets/images/screenshots/SeaPal-SatelliteView.jpg" />
 					</div>
 				</div>
 			</div><!-- row end -->
@@ -111,7 +113,7 @@
 				</div>
 				<div class="span6">
 					<div class="round">
-						<img src="images/screenshots/SeaPal-Southampton-OSM.jpg" />
+						<img src="assets/images/screenshots/SeaPal-Southampton-OSM.jpg" />
 					</div>
 				</div>
 			</div><!-- row end -->
@@ -135,14 +137,14 @@
 				</div>
 				<div class="span6">
 					<div class="round">
-						<img src="images/screenshots/SeaPal-Konstanz-IBN.jpg" />
+						<img src="assets/images/screenshots/SeaPal-Konstanz-IBN.jpg" />
 					</div>
 				</div>
 			</div><!-- row end -->
 		</div>
 
 		<div class="footer-wrapper">
-			<?php include("footer.php"); ?>
+			@footer()
 		</div>
 		
 	</body>
