implemented draft of boat_info > controller + model + view + routes

--- a/app/views/header.scala.html
+++ b/app/views/header.scala.html
@@ -13,7 +13,7 @@
 				<a class="brand" href="/">SEAPAL</a>
 				<div class="nav-collapse collapse">
 					<ul class="nav">
-						@HeaderHelper.renderNavigation()
+						@Html( HeaderHelper.renderNavigation() )
 					</ul>
 				</div>
 				<!--/.nav-collapse --> 
