Removed eclipse specific files, run "eclipsify" on your own Refactored views

--- a/app/views/content/screenshots.scala.html
+++ b/app/views/content/screenshots.scala.html
@@ -1,17 +1,4 @@
-@(message: String)
-
-<!DOCTYPE HTML>
-<html>
-	<head>
-		<title>@message</title>
-		@htmlhead()
-	</head>
-	<body>
-
-		<div class="header-wrapper">
-			@header()
-		</div>
-
+@main("SeaPal - Screenshots") {
 		<div class="content-wrapper">
 			<div class="container">
 				<div class="row">
@@ -124,10 +111,4 @@
 				</div>
 			</div>
 		</div>
-
-		<div class="footer-wrapper">
-			@footer()
-		</div>
-		
-	</body>
-</html>
+}
