--- a/app/views/content/about.scala.html
+++ b/app/views/content/about.scala.html
@@ -1,17 +1,4 @@
-@(message: String)
-
-<!DOCTYPE HTML>
-<html>
-	<head>
-		<title>@message</title>
-		@htmlhead()
-	</head>
-	<body>
-
-		<div class="header-wrapper">
-			@header()
-		</div>
-
+@main("SeaPal - Team") {
 		<div class="container">
 			<div class="row">
 				<div class="span12">
@@ -53,10 +40,4 @@
 				</div>
 			</div><!-- row end -->
 		</div>
-
-		<div class="footer-wrapper">
-			@footer()
-		</div>
-		
-	</body>
-</html>
+}
