--- a/app/views/content/boat_info.scala.html
+++ b/app/views/content/boat_info.scala.html
@@ -1,19 +1,8 @@
-@(title: String = "Boat Info", boats: List[Boat], form: Form[Boat])
+@(boats: List[Boat], form: Form[Boat])
 
 @import helper.twitterBootstrap._
 
-<!DOCTYPE HTML>
-<html>
-	<head>
-		<title>@title</title>
-		@htmlhead()
-	</head>
-	<body>
-
-		<div class="header-wrapper">
-			@header()
-		</div>
-
+@main("Boat Info") {
 		<div class="content-wrapper">
 			<div class="container">
 				<div class="row">
@@ -27,7 +16,7 @@
 					                
 					                @boat.bla
 					                
-					                @helper.form(routes.Boat_Info.deleteBoat(boat.id)) {
+					                @helper.form(routes.BoatInfo.deleteBoat(boat.id)) {
 					                    <input type="submit" value="Delete">
 					                }
 					            </li>
@@ -36,7 +25,7 @@
 					    
 					    <h2>Add a new task</h2>
     
-					    @helper.form(routes.Boat_Info.addBoat()) {
+					    @helper.form(routes.BoatInfo.addBoat()) {
 					        
 					        @helper.inputText(form("name"))
 					        					        
@@ -49,10 +38,4 @@
 				</div>
 			</div>
 		</div>
-
-		<div class="footer-wrapper">
-			@footer()
-		</div>
-		
-	</body>
-</html>
+}
