Added all boat fileds Changed from mem to file database Added custom scripts

--- a/app/views/content/index.scala.html
+++ b/app/views/content/index.scala.html
@@ -1,4 +1,4 @@
-@main("SeaPal - Track your searoutes easily", "index") {
+@main("SeaPal - Track your searoutes easily", Html(""), "index") {
 		<div class="content-wrapper">
 			<div id="head-unit-wrapper">
 				<div id="head-unit" class="hidden-phone">
