--- a/app/views/htmlhead.scala.html
+++ b/app/views/htmlhead.scala.html
@@ -1,7 +1,7 @@
 <!-- CSS -->
 <link href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700|Droid+Serif:400,700' rel='stylesheet' type='text/css'>
-<link type="text/css" rel="stylesheet" href="assets/lib/bootstrap-blue/css/bootstrap.min.css" />
-<link type="text/css" rel="stylesheet" href="assets/css/style.css" />
+<link type="text/css" rel="stylesheet" href="@routes.Assets.at("lib/bootstrap-blue/css/bootstrap.min.css")" />
+<link type="text/css" rel="stylesheet" href="@routes.Assets.at("css/style.css")" />
 
 <!-- JS -->
 <script src="http://code.jquery.com/jquery-latest.js"></script>
