--- a/app/views/content/boat_info.scala.html
+++ b/app/views/content/boat_info.scala.html
@@ -1,6 +1,4 @@
-@(boats: List[Boat], form: Form[Boat])
-
-@import helper.twitterBootstrap._
+@(form: Form[Boat])
 
 @scripts = {
 	<script type="text/javascript" src="@routes.Assets.at("js/boat_info.js")"></script>
@@ -11,7 +9,7 @@
 @main("Boat Info", scripts) {
 @helper.form(action = routes.BoatInfo.addBoat() , 'id -> "form") {
 			<input type="hidden" name="method" value="save"/>
-			<input type="hidden" id="idField" name="id" value="-1"/>
+			<input type="hidden" id="idField" name="id" value="-1" disabled="disabled" />
 			<div class="content-wrapper">
 				<div class="container">
 					<div class="row">
