--- a/app/views/navbar.scala.html
+++ b/app/views/navbar.scala.html
@@ -1,7 +1,7 @@
 @import controllers.helpers.Menus
 
-@display(menu: models.Menu) = {
-	<li class="@if(request.uri.endsWith(menu.url)){active}"><a href="@menu.url">@menu.name</a></li>
+@display(menuItem: models.MenuItem) = {
+	<li class="@if(request.uri.endsWith(menuItem.url)){active}"><a href="@menuItem.url">@menuItem.name</a></li>
 }
 
 <div class="navbar-fixed-top">
@@ -18,8 +18,8 @@
 				<div class="nav-collapse collapse">
 					<ul class="nav">
 					@****** if you get "null" here, your controller/method miss @With(Menus.class) annotation *****@
-					@for(menu <- Menus.mainNavigation()) {
-				    	@display(menu)
+					@for(menuItem <- Menus.mainNavigation()) {
+				    	@display(menuItem)
 				    }
 					</ul>
 				</div>
@@ -31,8 +31,8 @@
 		<div id="webapp-menu-pill">
 			<div class="container">
 				<ul class="nav nav-pills">
-					@for(menu <- Menus.subNavigation()) {
-				    	@display(menu)
+					@for(menuItem <- Menus.subNavigation()) {
+				    	@display(menuItem)
 				    }
 				</ul>
 			</div>
