Renamed url to uri for correctness Added content-wrapper div to main layout

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -26,9 +26,9 @@
 		<div class="header-wrapper">
 			@navbar()
 		</div>
-
-		@content
-
+		<div class="content-wrapper">
+			@content
+		</div>
 		<div class="footer-wrapper">
 			@footer()
 		</div>
