--- a/app/views/navbar.scala.html
+++ b/app/views/navbar.scala.html
@@ -1,7 +1,7 @@
 @import controllers.helpers.Menus
 
 @display(menuItem: models.MenuItem) = {
-	<li class="@if(menuItem.sameURL(request.uri)){active}"><a href="@menuItem.url">@menuItem.name</a></li>
+	<li class="@if(menuItem.sameURI(request.uri)){active}"><a href="@menuItem.uri">@menuItem.name</a></li>
 }
 
 <div class="navbar-fixed-top">
