Added html and routes for trip list

--- a/app/views/content/trip_list.scala.html
+++ b/app/views/content/trip_list.scala.html
@@ -1,23 +1,13 @@
-<?php
-	$boat_id = (array_key_exists('boat', $_GET) ? $_GET['boat'] : -1);
-?>
+@(boatId: Long)
 
-<!DOCTYPE HTML>
-<html>
-	<head>
-		<title>SeaPal</title>
-		<?php include("htmlhead.php"); ?>
-		<script type="text/javascript" src="js/trip_list.js"></script>
-		<script type="text/javascript" src="lib/jquery.paginatetable.js"></script>
-		<script type="text/javascript" src="lib/jsrender.js"></script>
-	</head>
-	<body class="withsubnavi">
+@scripts = {
+	<script type="text/javascript" src="@routes.Assets.at("js/trip_list.js")"></script>
+	<script type="text/javascript" src="@routes.Assets.at("lib/jquery.paginatetable.js")"></script>
+	<script type="text/javascript" src="@routes.Assets.at("lib/jsrender.js")"></script>
+}
 
-		<div class="header-wrapper">
-			<?php include("header.php"); ?>
-		</div>
-			<div class="content-wrapper">
-				<div class="container">
+@main("Seapal - Trip List", scripts, "withsubnavi") {
+			<div class="container">
 					<div class="row">
 						<div class="span8">
 							<div class="left">
@@ -26,11 +16,11 @@
 						</div>
 						<div class="span4">
 							<div class="right buttons_top">
-								<a id="addButton" href="trip_info.php?boat=<?=$boat_id ?>" class="btn btn-primary"><i class="icon-plus icon-white"></i> <span>Hinzufügen<span></a>
+								<a id="addButton" href="/trip_info/@boatId" class="btn btn-primary"><i class="icon-plus icon-white"></i> <span>Hinzufügen<span></a>
 							</div>
 						</div>
 					</div>
-					<input type="hidden" id="boatId" value="<?=$boat_id ?>" />
+					<input type="hidden" id="boatId" value="@boatId" />
 					<div class="listview-wrapper">
 						<div class="listview">
 							<div class="row">
@@ -56,7 +46,7 @@
 											<td>{{>start_time}}</td>
 											<td class="actionCol">
 												<a href="#"  class="deleteItemBtn tooltipable" rel="tooltip" title="Löschen"><i class="icon-remove"></i></a>
-												<a href="trip_info.php?trip={{>id}}" class="editItemBtn tooltipable" rel="tooltip" title="Auswählen"><i class="icon-chevron-right"></i></a>
+												<a href="/trip_info/{{>id}}" class="editItemBtn tooltipable" rel="tooltip" title="Auswählen"><i class="icon-chevron-right"></i></a>
 											</td>
 										</tr>
 									</script>
@@ -79,11 +69,7 @@
 						</div>
 					</div>
 				</div>
-			</div>
-		</form>
-		<div class="footer-wrapper">
-			<?php include("footer.php"); ?>
-		</div>
+		<!-- modals -->
 		<div id="deletePromptModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="deletePromptModalLabel" aria-hidden="true">
 		  <div class="modal-header">
 		    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
@@ -97,6 +83,6 @@
     		<button class="btn btn-danger" id="deleteModalBtn" data-dismiss="modal">Löschen</button>
 		  </div>
 		</div>
-		
-	</body>
-</html>
+}
+
+
