--- a/app/views/content/contact.scala.html
+++ b/app/views/content/contact.scala.html
@@ -1,33 +1,33 @@
 @main("Seapal - Contact") {
-		<div class="container">
-			<div class="row">
-				<div class="span6">
-					<div class="round">
-						<h2>IBN</h2>
-						<p><strong>IBN Redaktion</strong><br />
-						Hans-Dieter Möhlhenrich<br />
-						Malvine-Schiesser-Weg 3<br />
-						78315 Radolfzell<br />
-						Germany</p>
+	<div class="container">
+		<div class="row">
+			<div class="span6">
+				<div class="round">
+					<h2>IBN</h2>
+					<p><strong>IBN Redaktion</strong><br />
+					Hans-Dieter MÃ¶hlhenrich<br />
+					Malvine-Schiesser-Weg 3<br />
+					78315 Radolfzell<br />
+					Germany</p>
 
-						<p>www.ibn-online.de<br />
-						ibn at ibn-online.de</p>
-					</div>
+					<p>www.ibn-online.de<br />
+					ibn at ibn-online.de</p>
 				</div>
-				<div class="span6">
-					<div class="round">
-						<h2>HTWG Constance</h2>
-						<p><strong>HTWG Konstanz</strong><br />
-						Informatik<br />
-						Prof. Dr. Marko Boger<br />
-						Brauneggerstr. 55<br />
-						78462 Konstanz<br />
-						Germany</p>
+			</div>
+			<div class="span6">
+				<div class="round">
+					<h2>HTWG Constance</h2>
+					<p><strong>HTWG Konstanz</strong><br />
+					Informatik<br />
+					Prof. Dr. Marko Boger<br />
+					Brauneggerstr. 55<br />
+					78462 Konstanz<br />
+					Germany</p>
 
-						<p>www.htwg-konstanz.de<br />
-						marko.boger at htwg-konstanz.de</p>
-					</div>
+					<p>www.htwg-konstanz.de<br />
+					marko.boger at htwg-konstanz.de</p>
 				</div>
-			</div><!-- row end -->
-		</div>
+			</div>
+		</div><!-- row end -->
+	</div>
 }
