--- a/app/views/content/boat_info.scala.html
+++ b/app/views/content/boat_info.scala.html
@@ -1,6 +1,7 @@
 @(form: Form[Boat])
 
 @scripts = {
+	<script type="text/javascript" src="@routes.Application.javascriptRoutes"></script>
 	<script type="text/javascript" src="@routes.Assets.at("js/boat_info.js")"></script>
 	<script type="text/javascript" src="@routes.Assets.at("lib/jquery.paginatetable.js")"></script>
 	<script type="text/javascript" src="@routes.Assets.at("lib/jsrender.js")"></script>
