Refactored some class namings Added more javascript routes

--- a/app/views/content/trip_list.scala.html
+++ b/app/views/content/trip_list.scala.html
@@ -1,6 +1,7 @@
 @(boatId: Long)
 
 @scripts = {
+	<script type="text/javascript" src="@routes.Application.javascriptRoutes"></script>
 	<script type="text/javascript" src="@routes.Assets.at("js/trip_list.js")"></script>
 	<script type="text/javascript" src="@routes.Assets.at("lib/jquery.paginatetable.js")"></script>
 	<script type="text/javascript" src="@routes.Assets.at("lib/jsrender.js")"></script>
