--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -11,7 +11,7 @@
 		
 		<!-- JS -->
 		<script src="http://code.jquery.com/jquery-latest.js"></script>
-		<script src="assets/lib/bootstrap-blue/js/bootstrap.min.js"></script>
+		<script src="@routes.Assets.at("lib/bootstrap-blue/js/bootstrap.min.js")"></script>
 		@moreScripts
 		
 		<!--[if lt IE 9]>
