--- a/app/views/content/boat_info.scala.html
+++ b/app/views/content/boat_info.scala.html
@@ -1,5 +1,3 @@
-@(form: Form[Boat])
-
 @scripts = {
 	<script type="text/javascript" src="@routes.Application.javascriptRoutes"></script>
 	<script type="text/javascript" src="@routes.Assets.at("js/boat_info.js")"></script>
@@ -8,7 +6,7 @@
 }
 
 @main("Boat Info", scripts, "withsubnavi") {
-@helper.form(action = routes.BoatInfo.addBoat() , 'id -> "form") {
+@helper.form(action = routes.BoatAPI.addBoat() , 'id -> "form") {
 			<input type="hidden" name="method" value="save"/>
 			<input type="hidden" id="idField" name="id" value="-1" />
 			<div class="content-wrapper">
