--- a/app/views/content/seamap.scala.html
+++ b/app/views/content/seamap.scala.html
@@ -1,4 +1,5 @@
 @scripts = {
+	<script type="text/javascript" src="@routes.Application.javascriptRoutes"></script>
 	<script type="text/javascript" src="https://maps.google.com/maps/api/js?key=AIzaSyAL6gKFmwH7gDXmmAW-5VqkW_HbJG7_QLA&sensor=false"></script>
 	<script type="text/javascript" src="@routes.Assets.at("lib/label.js")"></script>
 	<script type="text/javascript" src="@routes.Assets.at("lib/seamap/seamap-1.0.0.js")"></script>
