--- a/app/views/content/boat_info.scala.html
+++ b/app/views/content/boat_info.scala.html
@@ -166,7 +166,7 @@
 											<td class="actionCol">
 												<a href="#" class="editBoadBtn tooltipable" rel="tooltip" title="Bearbeiten"><i class="icon-pencil"></i></a>
 												<a href="#" class="deleteBoadBtn tooltipable" rel="tooltip" title="Löschen"><i class="icon-remove"></i></a>
-												<a href="/trip_list/{{>id}}" class="tooltipable" rel="tooltip" title="Auswählen"><i class="icon-chevron-right"></i></a>
+												<a href="#" class="selectBoatBtn tooltipable" rel="tooltip" title="Auswählen"><i class="icon-chevron-right"></i></a>
 											</td>
 										</tr>
 									</script>
