--- a/app/views/content/trip_info.scala.html
+++ b/app/views/content/trip_info.scala.html
@@ -1,28 +1,21 @@
-<!DOCTYPE HTML>
-<html>
-	<head>
-		<title>SeaPal</title>
-		<?php include("htmlhead.php"); ?>
-		<link type="text/css" rel="stylesheet" href="lib/datepicker/css/datepicker.css" />
-		<script type="text/javascript" src="lib/datepicker/js/bootstrap-datepicker.js"></script>
-		<script type="text/javascript" src="js/trip_info.js"></script>
-		<script type="text/javascript" src="lib/jquery.paginatetable.js"></script>
-		<script type="text/javascript" src="lib/jsrender.js"></script>
-		<script type="text/javascript" src="https://maps.google.com/maps/api/js?key=AIzaSyAL6gKFmwH7gDXmmAW-5VqkW_HbJG7_QLA&sensor=false"></script>
-		<script type="text/javascript" src="lib/label.js"></script>
-		<script type="text/javascript" src="lib/seamap/seamap-1.0.0.js"></script>
-	</head>
-	<body class="withsubnavi">
+@(boatId: Long)
 
-		<div class="header-wrapper">
-			<?php include("header.php"); ?>
-		</div>
+@scripts = {
+	<script type="text/javascript" src="@routes.Application.javascriptRoutes"></script>
+	<link type="text/css" rel="stylesheet" href="@routes.Assets.at("lib/datepicker/css/datepicker.css")" />
+	<script type="text/javascript" src="@routes.Assets.at("lib/datepicker/js/bootstrap-datepicker.js")"></script>
+	<script type="text/javascript" src="@routes.Assets.at("js/trip_info.js")"></script>
+	<script type="text/javascript" src="@routes.Assets.at("lib/jquery.paginatetable.js")"></script>
+	<script type="text/javascript" src="@routes.Assets.at("lib/jsrender.js")"></script>
+	<script type="text/javascript" src="https://maps.google.com/maps/api/js?key=AIzaSyAL6gKFmwH7gDXmmAW-5VqkW_HbJG7_QLA&sensor=false"></script>
+	<script type="text/javascript" src="@routes.Assets.at("lib/label.js")"></script>
+	<script type="text/javascript" src="@routes.Assets.at("lib/seamap/seamap-1.0.0.js")"></script>
+}
 
-		<div class="content-wrapper">
-			<form id="form" method="post" action="../backend/trip_service.php">
-				<input type="hidden" name="method" value="save" />
-				<input type="hidden" id="trip_id" name="id" value="<?= (array_key_exists('trip', $_GET) ? $_GET['trip'] : -1) ?>" />
-				<input type="hidden" id="boat_id" name="boat_id" value="<?= (array_key_exists('boat', $_GET) ? $_GET['boat'] : -1) ?>" />
+@main("SeaPal - Trip Info", scripts, "withsubnavi") {
+@helper.form(action = routes.TripAPI.addTrip() , 'id -> "form") {
+			<input type="hidden" id="trip_id" name="id" value="<?= (array_key_exists('trip', $_GET) ? $_GET['trip'] : -1) ?>" />
+				<input type="hidden" id="boat_id" name="boat_id" value="@boatId" />
 				<div class="container">
 					<div class="row">
 						<div class="span8">
@@ -189,12 +182,8 @@
 						</div>
 					</div>
 				</div>
-			</div>
-		</form>
-		<div class="footer-wrapper">
-			<?php include("footer.php"); ?>
-		</div>
-
+		}
+		<!-- Modals -->
 		<div id="addSuccessModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="addSuccessModalLabel" aria-hidden="true">
 		  <div class="modal-header">
 		    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
@@ -222,5 +211,6 @@
 		  </div>
 		</div>
 		
-	</body>
-</html>
+}
+
+
