--- a/app/views/content/log_entry.scala.html
+++ b/app/views/content/log_entry.scala.html
@@ -1,33 +1,19 @@
-<?php
-	include_once('../backend/headsail_dal.php');
-	include_once('../backend/mainsail_dal.php');
-	include_once('../backend/maneuver_dal.php');
-	include_once('../backend/mark_dal.php');
-?>
-<!DOCTYPE HTML>
-<html>
-	<head>
-		<title>SeaPal</title>
-		<?php include("htmlhead.php"); ?>
-		<link type="text/css" rel="stylesheet" href="lib/datepicker/css/datepicker.css" />
-		<script type="text/javascript" src="lib/datepicker/js/bootstrap-datepicker.js"></script>
-		<script type="text/javascript" src="js/log_entry.js"></script>
-		<script type="text/javascript" src="https://maps.google.com/maps/api/js?key=AIzaSyAL6gKFmwH7gDXmmAW-5VqkW_HbJG7_QLA&sensor=false"></script>
-		<script type="text/javascript" src="lib/label.js"></script>
-		<script type="text/javascript" src="lib/seamap/seamap-1.0.0.js"></script>
-	</head>
-	<body class="withsubnavi">
+@(tripId: Long)
 
-		<div class="header-wrapper">
-			<?php include("header.php"); ?>
-		</div>
+@scripts = {
+	<script type="text/javascript" src="@routes.Application.javascriptRoutes"></script>
+	<link type="text/css" rel="stylesheet" href="@routes.Assets.at("lib/datepicker/css/datepicker.css")" />
+	<script type="text/javascript" src="@routes.Assets.at("lib/datepicker/js/bootstrap-datepicker.js")"></script>
+	<script type="text/javascript" src="@routes.Assets.at("js/log_entry.js")"></script>
+	<script type="text/javascript" src="https://maps.google.com/maps/api/js?key=AIzaSyAL6gKFmwH7gDXmmAW-5VqkW_HbJG7_QLA&sensor=false"></script>
+	<script type="text/javascript" src="@routes.Assets.at("lib/label.js")"></script>
+	<script type="text/javascript" src="@routes.Assets.at("lib/seamap/seamap-1.0.0.js")"></script>
+}
 
-		<div class="content-wrapper">
-			<form id="form" method="post" action="../backend/log_entry_service.php">
-				<input type="hidden" name="method" value="save" />
-				<input type="hidden" id="trip_id" name="trip_id" value="<?= (array_key_exists('trip', $_GET) ? $_GET['trip'] : -1) ?>" />
+@main("Waypoint", scripts, "withsubnavi") {
+@helper.form(action = routes.WaypointAPI.addWaypoint() , 'id -> "form") {
+			<input type="hidden" id="trip_id" name="trip_id" value="@tripId" />
 				<div class="container">
-					
 					<div class="row">
 						<div class="span8">
 							<div class="left">
@@ -154,7 +140,7 @@
 									<div class="photos">
 										<h4>Photos</h4>
 										<div class="gadget">
-											<img width="230" height="230" src="images/photo2.jpg"/>
+											<img width="230" height="230" src="@routes.Assets.at("images/photo2.jpg")"/>
 										</div>
 									</div>
 								</div>
@@ -162,12 +148,8 @@
 						</div>
 					</div>
 				</div>
-
-			</div>
-		</form>
-		<div class="footer-wrapper">
-			<?php include("footer.php"); ?>
-		</div>
+		}
+		<!-- Modals -->
 		<div id="addSuccessModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="addSuccessModalLabel" aria-hidden="true">
 		  <div class="modal-header">
 		    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
@@ -180,5 +162,6 @@
 		    <button class="btn btn-primary" data-dismiss="modal" aria-hidden="true">OK</button>
 		  </div>
 		</div>
-	</body>
-</html>
+}
+
+
