--- a/app/views/content/trip_list.scala.html
+++ b/app/views/content/trip_list.scala.html
@@ -12,13 +12,15 @@
 					<div class="row">
 						<div class="span8">
 							<div class="left">
-								<h1>Tripliste</h1>
+								<h1>Tripliste @if(boatId < 0){ aller Boote }</h1>
 							</div>
 						</div>
 						<div class="span4">
-							<div class="right buttons_top">
-								<a id="addButton" href="@routes.Application.trip_add(boatId)" class="btn btn-primary"><i class="icon-plus icon-white"></i> <span>Hinzufügen<span></a>
-							</div>
+							@if(boatId > 0){
+								<div class="right buttons_top">
+									<a id="addButton" href="@routes.Application.trip_add(boatId)" class="btn btn-primary"><i class="icon-plus icon-white"></i> <span>Hinzufügen<span></a>
+								</div>
+							}
 						</div>
 					</div>
 					<input type="hidden" id="boatId" value="@boatId" />
