--- a/app/de/htwg/seapal/web/views/navbar.scala.html
+++ b/app/de/htwg/seapal/web/views/navbar.scala.html
@@ -1,4 +1,4 @@
-@import controllers.helpers.Menus
+@import de.htwg.seapal.web.controllers.helpers.Menus
 
 
 @display(menuItem: models.MenuItem) = {
