Added Guice Dependecies for Controller and use them in the play controller part

--- a/app/de/htwg/seapal/web/views/content/trip_list.scala.html
+++ b/app/de/htwg/seapal/web/views/content/trip_list.scala.html
@@ -2,7 +2,7 @@
 
 @scripts = {
 	<script type="text/javascript" src="@de.htwg.seapal.web.controllers.routes.Application.javascriptRoutes"></script>
-	<script type="text/javascript" src="@routes.Assets.at("js/trip_list.js")"></script>
+	<script type="text/javascript" src="@routes.Assets.at("js/trip_list.min.js")"></script>
 	<script type="text/javascript" src="@routes.Assets.at("lib/jquery.paginatetable.js")"></script>
 	<script type="text/javascript" src="@routes.Assets.at("lib/jsrender.js")"></script>
 }
