--- a/app/de/htwg/seapal/web/views/content/boat_info.scala.html
+++ b/app/de/htwg/seapal/web/views/content/boat_info.scala.html
@@ -1,6 +1,6 @@
 @scripts = {
 	<script type="text/javascript" src="@de.htwg.seapal.web.controllers.routes.Application.javascriptRoutes"></script>
-	<script type="text/javascript" src="@routes.Assets.at("js/boat_info.js")"></script>
+	<script type="text/javascript" src="@routes.Assets.at("js/boat_info.min.js")"></script>
 	<script type="text/javascript" src="@routes.Assets.at("lib/jquery.paginatetable.js")"></script>
 	<script type="text/javascript" src="@routes.Assets.at("lib/jsrender.js")"></script>
 }
