--- a/app/de/htwg/seapal/web/views/content/log_entry.scala.html
+++ b/app/de/htwg/seapal/web/views/content/log_entry.scala.html
@@ -4,7 +4,7 @@
 	<script type="text/javascript" src="@de.htwg.seapal.web.controllers.routes.Application.javascriptRoutes"></script>
 	<link type="text/css" rel="stylesheet" href="@routes.Assets.at("lib/datepicker/css/datepicker.css")" />
 	<script type="text/javascript" src="@routes.Assets.at("lib/datepicker/js/bootstrap-datepicker.js")"></script>
-	<script type="text/javascript" src="@routes.Assets.at("js/log_entry.js")"></script>
+	<script type="text/javascript" src="@routes.Assets.at("js/log_entry.min.js")"></script>
 	<script type="text/javascript" src="https://maps.google.com/maps/api/js?key=AIzaSyAL6gKFmwH7gDXmmAW-5VqkW_HbJG7_QLA&sensor=false"></script>
 	<script type="text/javascript" src="@routes.Assets.at("lib/label.js")"></script>
 	<script type="text/javascript" src="@routes.Assets.at("lib/seamap/seamap-1.0.0.js")"></script>
